removed useless bootstrap theme, fixed toolbar alignment, fixed ff glitch

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -2,8 +2,8 @@ body {
   padding-top: 50px;
   /*background-color: white;*/
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
-
+  /*margin-bottom: 40px;*/
+  background-color: #f1f1f1;
 }
 
 /* Sticky footer styles
@@ -20,7 +20,7 @@ html {
     font-size:15px;
     /* Set the fixed height of the footer here */
 
-height: 60px;
+    height: 40px;
     background-color: white;
 }
 body > .container {
