--- a/client/css/toolbar.css
+++ b/client/css/toolbar.css
@@ -13,3 +13,14 @@
 	float: right;
 	margin: 4px;
 }
+
+.toolbar input[type="range"].range-zoom {
+  display: block;
+  float:right;
+  margin-top: 12px;
+  width: 200px;
+}
+
+.toolbar select {
+  margin-top: 8px;
+}
